kubernetes/apps/vaultwarden/ingress.yaml
# Kapitel 23: im Tailnet unter https://vaultwarden.<tailnet>.ts.net
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: vaultwarden
      port:
        number: 80
  tls:
    - hosts:
        - vaultwarden
